docs/java-se: 通义灵码相关代码演示
- 新增类继承关系的准备工作
- 添加 Animal、Cat、Dog、HuskyDog 和 TabbyCat 类
- 更新示例代码，展示类的继承和多态
- 优化文档结构，使用代码组展示不同类的代码